--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/lamh85/webpack-starter/issues"
   },
-  "homepage": "https://github.com/lamh85/webpack-starter#readme"
+  "homepage": "https://github.com/lamh85/webpack-starter#readme",
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  }
 }
